# vaic

./: .gitignore  Makefile  README.md  pyproject.toml  repo-init.sh  requirements.txt  test.py
src/vaic/: __init__.py
