[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "vaic"
version = "0.0.1"
authors = [
  { name="Damon Reed", email="dreed@nomadia.org" },
]
description = "VAIC - Vertex AI Client"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/damonreed/vaic"
Issues = "https://github.com/damonreed/img-db/vaic"